--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,14 @@
             content="Web site created using create-react-app"
         />
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+        <!-- Add this to the head of your HTML file -->
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+            integrity="sha384-rE2iPd+6YHQGr5fP+78DTQzqFt0k3hHbNxjkMb51Ne9QzVYjz1h8eEBBPGjfaL3p"
+            crossorigin="anonymous"
+        />
+
         <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
